updated labels for dietlog, excersielog, and userprofile